# althemer

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_DOWNLOAD.md  README.md
src/: alacritty.rs  cli.rs  config.rs  downloader.rs  error.rs  main.rs  picker.rs  switcher.rs  themes.rs  tui.rs
src/config/: alacritty.rs  cli.rs  config.rs  configuration.rs  mod.rs
