[package]
name = "althemer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
nucleo = "0.5.0"
nucleo-picker = "0.11.1"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1.2"
thiserror = "2.0.18"
toml = "1.0.3"

[dev-dependencies]
tempfile = "3.14"
